[package]
name = "pulsar-report"
version = "0.1.0"
authors = ["cliff"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
futures = "0.3"
pulsar = "*"
lazy_static = "*"
tokio = {version = "*", features = ["macros","rt","rt-multi-thread","time","signal"] }
thiserror = "*"
regex = "*"
redis = { version = "*", features = ["tokio-comp"] }
serde = {version = "1.0", features = ["derive"] }
log = "*"
serde_derive = "*"
serde_json = "*"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }